--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,35 +1,26 @@
-# This is a basic workflow to help you get started with Actions
+name: Build
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Do the build
         run: echo "A build step" >> README.md
 
-      # Runs a set of commands using the runners shell
-      - name: Upload the README
+      - name: Upload the build
         uses: actions/upload-artifact@v4
         with:
-          name: the-readme
+          name: build_artifact
           path: README.md
+
+      - name: Release to UAT
+        uses: ./.github/workflows/release.yml
+        with:
+          environment: uat
