--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,6 @@ jobs:
           path: README.md
 
       - name: Release to UAT
-        uses: ./.github/workflows/release.yml
+        uses: ./.github/workflows/release.yml@main
         with:
           environment: uat
