--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       build:
         description: "Build to release"
-        default: ${{ github.run_id }}
+        required: true
         type: string
 
       environment:
@@ -26,7 +26,9 @@ jobs:
       - name: Would deploy
         run: |
           echo "Would deploy to $ENVIRONMENT"
+          echo "Using build $BUILD"
           ls -l
           cat README.md
         env:
+          BUILD: ${{ github.event.inputs.build }}
           ENVIRONMENT: ${{ github.event.inputs.environment }}
