--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
 
   release_to_uat:
     uses: ./.github/workflows/release.yml
+    needs: build
     with:
       environment: uat
       build: ${{ github.run_id }}
