--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Release
         uses: ./.github/workflows/release.yml
         with:
-          environment: ${{ github.event.inputs.environment }}
-          build: ${{ github.event.inputs.build }}
+          environment: ${{ inputs.environment }}
+          build: ${{ inputs.build }}
