--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Download the build
         uses: actions/download-artifact@v4
         with:
-          run-id: ${{ github.event.inputs.build }}
+          run-id: ${{ inputs.build }}
 
       - name: Would deploy
         run: |
@@ -30,5 +30,5 @@ jobs:
           ls -l
           cat README.md
         env:
-          BUILD: ${{ github.event.inputs.build }}
-          ENVIRONMENT: ${{ github.event.inputs.environment }}
+          BUILD: ${{ inputs.build }}
+          ENVIRONMENT: ${{ inputs.environment }}
