--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
           name: build_artifact
           path: README.md
 
-  release_to_uat:
+  uat:
     uses: ./.github/workflows/release.yml
     needs: build
     with:
