--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          repository: Taiters/test-manual-deploy-stuff
           run-id: ${{ inputs.build }}
           path: target
 
