--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,9 @@ jobs:
           name: build_artifact
           path: README.md
 
-  uat:
+  not_production:
     uses: ./.github/workflows/release.yml
     needs: build
+    environment: not-production
     with:
-      environment: uat
-      build: ${{ github.run_id }}
+      environment: not-production
