--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,17 +1,12 @@
 name: Release
+run-name: Release to ${{ inputs.environment }}
 
 on:
   workflow_call:
     inputs:
-      build:
-        description: "Build to release"
-        required: true
-        type: string
-
       environment:
         description: "Environment to release to"
-        default: "uat"
-        type: string
+        required: true
 
 jobs:
   release:
@@ -23,17 +18,12 @@ jobs:
       - name: Download the build
         uses: actions/download-artifact@v4
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          repository: Taiters/test-manual-deploy-stuff
-          run-id: ${{ inputs.build }}
           path: target
 
       - name: Would deploy
         run: |
           echo "Would deploy to $ENVIRONMENT"
-          echo "Using build $BUILD"
           ls -lR
           cat target/build_artifact/README.md
         env:
-          BUILD: ${{ inputs.build }}
           ENVIRONMENT: ${{ inputs.environment }}
