--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,14 @@ on:
         description: "Environment to deploy to"
         type: string
         required: true
+    secrets:
+      AWS_ACCESS_KEY:
+        description: "AWS access key"
+        required: true
+
+      AWS_SECRET_ACCESS_KEY:
+        description: "AWS secret access key"
+        required: true
 
 jobs:
   deploy:
@@ -23,7 +31,23 @@ jobs:
       - name: Would deploy
         run: |
           echo "Would deploy to $ENVIRONMENT"
+          echo "${AWS_ACCESS_KEY_ID:0:1}"
           ls -lR
           cat target/build_artifact/README.md
         env:
           ENVIRONMENT: ${{ inputs.environment }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+
+      - name: Zip code
+        run: |
+          zip openrail.zip target/build_artifact/README.md
+
+      - name: Upload to S3
+        uses: jakejarvis/s3-sync-action@v0.5.0
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_S3_BUCKET: lambda-functions-${{ inputs.environment }}-openrail/openrail
+          SRC: openrail.zip
+          DEST: openrail.zip
+
