Revert "fixing uat in the s3 path (#4)"
This reverts commit 7d2f47ee82b5a9af3694c417db53f7986764d6bf.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_S3_BUCKET: lambda-functions-uat-openrail/openrail
+          AWS_S3_BUCKET: lambda-functions-${{ inputs.environment }}-openrail/openrail
           SRC: openrail.zip
           DEST: openrail.zip
 
