--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,34 +26,8 @@ jobs:
       - name: Download the artifacts
         uses: actions/download-artifact@v4
         with:
+          name: built_code
           path: artifacts
-
-      - name: print content of README.md
-        run: |
-          ls -la ./artifacts
-          echo "Printing content of README.md"
-          cat ./artifacts/built_code/README.md
-
-      # TODO: Test if can store something in s3 by trying out the
-
-      - name: Zip code
-        run: |
-          cd ./artifacts/built_code
-          zip -r openrail.zip .
-
-      - name: Would deploy
-        run: |
-          echo "Would deploy to $ENVIRONMENT"
-          echo "this is the 2 first chars ${AWS_ACCESS_KEY_ID:0:2}"
-          ls -lR ./artifacts
-          cat artifacts/built_code/README.md
-        env:
-          ENVIRONMENT: ${{ inputs.environment }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
-#
-#      - name: Zip code
-#        run: |
-#          zip openrail.zip target/build_artifact/README.md
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -62,16 +36,33 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
 
-      - name: list env vars
-        run: env
+      - name: list content of artifacts
+        run: |
+          ls -lR ./artifacts
+
+      - name: Copy zip to s3
+        run: aws s3 cp ./artifacts/built_code/openrail.zip s3://lambda-${{ inputs.environment }}/openrail/openrail.zip
+
 #
-      - name: create file
-        run: touch file_to_upload.txt
-      - name: Upload to S3
-        uses: jakejarvis/s3-sync-action@v0.5.1
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_S3_BUCKET: lambda-${{ inputs.environment }}-openrail
-          AWS_REGION: eu-west-1
+#      - name: Zip code
+#        run: |
+#          zip openrail.zip target/build_artifact/README.md
+
+#      - name: Configure AWS Credentials
+#        uses: aws-actions/configure-aws-credentials@v4
+#        with:
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          aws-region: eu-west-1
+#
+#      - name: list env vars
+#        run: env
+##
+#      - name: Upload to S3
+#        uses: jakejarvis/s3-sync-action@v0.5.1
+#        env:
+#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          AWS_S3_BUCKET: lambda-${{ inputs.environment }}-openrail
+#          AWS_REGION: eu-west-1
 
