--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -3,6 +3,11 @@ name: Checks
 
 on:
   workflow_call: # This will trigger the workflow for any workflow call
+    inputs:
+      environment:
+        description: "Environment to deploy to"
+        type: string
+        required: true
     secrets:
       AWS_ACCESS_KEY:
         description: "AWS access key"
@@ -11,7 +16,6 @@ on:
       AWS_SECRET_ACCESS_KEY:
         description: "AWS secret access key"
         required: true
-  push: # No branches specified, so it will trigger on pushes to any branch
 
 jobs:
   build:
