--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Print Used env
         run: |
           echo "Env used is ${{ inputs.environment }}"
-          echo "Human readable env is ${READABLE_ENV}"
+          echo "Human readable env is ...${READABLE_ENV: -10}"
