--- a/.github/workflows/checks-only-uat.yml
+++ b/.github/workflows/checks-only-uat.yml
@@ -19,8 +19,8 @@ jobs:
         id: generate-lambda-names
         run: |
           query_expression='StackResourceSummaries[?ResourceType==`AWS::Lambda::Function`].PhysicalResourceId'
-          lambda_function_names=$(aws cloudformation list-stack-resources --stack-name buildcon2023 --query ${query_expression} --output text)
-          echo "names=$(jq --compact-output --null-input '$ARGS.positional' --args -- "${lambda_function_names[@]}")" >> $GITHUB_OUTPUT
+          lambda_function_names=$(aws cloudformation list-stack-resources --stack-name buildcon2023 --query ${query_expression})
+          echo "names=$lambda_function_names" >> $GITHUB_OUTPUT
     outputs:
       lambda_names: ${{ steps.generate-lambda-names.outputs.names }}
     environment: uat
