--- a/.github/workflows/checks-only-uat.yml
+++ b/.github/workflows/checks-only-uat.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           query_expression='StackResourceSummaries[?ResourceType==`AWS::Lambda::Function`].PhysicalResourceId'
           lambda_function_names=$(aws cloudformation list-stack-resources --stack-name buildcon2023 --query ${query_expression})
-          echo "names=${lambda_function_names}" >> $GITHUB_OUTPUT
+          echo "names=$(jq -cn --argjson lambda_names "$lambda_function_names" '{target: lambda_names}')" >> $GITHUB_OUTPUT
     outputs:
       lambda_names: ${{ steps.generate-lambda-names.outputs.names }}
     environment: uat
@@ -29,10 +29,9 @@ jobs:
     needs: calculate-lambda-names
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        lambda_name: ${{fromJson(needs.calculate-lambda-names.outputs.lambda_names)}}
+      matrix: ${{fromJson(needs.calculate-lambda-names.outputs.lambda_names)}}
     steps:
-      - run: echo "Updating code for lambda ${{ matrix.lambda_name }}"
+      - run: echo "Updating code for lambda ${{ matrix.target }}"
 
   checks:
     uses: ./.github/workflows/checks.yml
